--- a/package.json
+++ b/package.json
@@ -3,9 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
-    "react-scripts": "1.1.4"
+    "axios": "^0.18.0",
+    "lodash": "^4.17.10",
+    "prop-types": "^15.6.1",
+    "query-string": "^6.1.0",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-modal": "^3.4.4",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-router-modal": "^1.3.5",
+    "react-scripts": "1.1.4",
+    "react-templates": "^0.6.3",
+    "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-form": "^7.3.0",
+    "redux-logger": "^3.0.6",
+    "redux-promise": "^0.5.3",
+    "slug": "^0.9.1",
+    "uuid": "^3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
