CRU AWS DynamoDB

--- a/backend/cognito/forum-app-api/serverless.yml
+++ b/backend/cognito/forum-app-api/serverless.yml
@@ -51,3 +51,34 @@ functions:
           method: post
           cors: true
           authorizer: aws_iam
+  get:
+    handler: get.main
+    events:
+      - http:
+          path: posts/{id}
+          method: get
+          cors: true
+          authorizer: aws_iam
+
+  list:
+    # Defines an HTTP API endpoint that calls the main function in list.js
+    # - path: url path is /notes
+    # - method: GET request
+    handler: list.main
+    events:
+      - http:
+          path: posts
+          method: get
+          cors: true
+          authorizer: aws_iam
+  update:
+    # Defines an HTTP API endpoint that calls the main function in update.js
+    # - path: url path is /notes/{id}
+    # - method: PUT request
+    handler: update.main
+    events:
+      - http:
+          path: notes/{id}
+          method: put
+          cors: true
+          authorizer: aws_iam
