--- a/package.json
+++ b/package.json
@@ -3,23 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.2.2",
+    "@material-ui/icons": "^1.1.0",
+    "amazon-cognito-identity-js": "^2.0.9",
+    "amazon-cognito-js": "^1.1.0",
+    "aws-amplify": "^0.4.6",
     "axios": "^0.18.0",
     "lodash": "^4.17.10",
-    "prop-types": "^15.6.1",
+    "material-ui": "^0.20.1",
+    "prop-types": "^15.6.2",
     "query-string": "^6.1.0",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-modal": "^3.4.4",
+    "react": "^16.4.1",
+    "react-bootstrap": "^0.32.1",
+    "react-dom": "^16.4.1",
+    "react-modal": "^3.4.5",
     "react-redux": "^5.0.7",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-router-modal": "^1.3.5",
     "react-scripts": "1.1.4",
+    "react-tap-event-plugin": "^3.0.3",
     "react-templates": "^0.6.3",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
     "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.3.0",
     "slug": "^0.9.1",
     "uuid": "^3.2.1"
   },
