--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.3.0",
     "slug": "^0.9.1",
+    "typeface-roboto": "0.0.54",
     "uuid": "^3.2.1"
   },
   "scripts": {
